--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint-config-standard": "^10.2.1",
         "eslint-import-resolver-webpack": "^0.8.1",
         "eslint-plugin-import": "^2.2.0",
+        "eslint-plugin-json": "^1.2.0",
         "eslint-plugin-node": "^4.2.2",
         "eslint-plugin-promise": "^3.5.0",
         "eslint-plugin-standard": "^3.0.1",
